# AMS-I03

./: .gitignore  .project  Afaire.txt  README.md  current
2017_2018/: Programme  (+1 more)
2017_2018/Corriges/I03_TP2/FalseSharing/src/: CMakeLists.txt
2017_2018/Corriges/I03_TP2/Q1/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  values.cxx
2017_2018/Corriges/MesureTemps/src/: CMakeLists.txt  main.cxx  parameters.cxx  scheme.cxx
2017_2018/TP/Ex1/src/: CMakeLists.txt  main.c
2017_2018/TP/Ex2/src/: CMakeLists.txt
2017_2018/TP/I03_TP1/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  values.cxx
2017_2018/TP/I03_TP2/FalseSharing/src/: CMakeLists.txt  main.c  main_2.c
2017_2018/TP/I03_TP3/PoissonMPI/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  values.cxx  values.hxx
2017_2018/TP/I03_TP3/PoissonMPIOpenMP/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx
2017_2018/TP/I03_TP3/PoissonSeq/src/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx
2017_2018/TP/I03_TP6/PoissonCuda/src/: CMakeLists.txt  GPU.hxx  gpu_scheme.cu  gpu_scheme.hxx  main.cxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx
2017_2018/TP/I03_TP6/Poisson_Cuda/src/: .project  AbstractParameters.cxx  AbstractParameters.hxx  AbstractScheme.cxx  AbstractScheme.hxx  AbstractValues.cxx  AbstractValues.hxx  CMakeLists.txt  CpuParameters.cxx  CpuScheme.cxx  CpuScheme.hxx  CpuValues.cxx  CpuValues.hxx  ErrCheck.h  GpuParameters.cu  GpuParameters.hxx  GpuScheme.cu  GpuScheme.hxx  GpuValues.cu  GpuValues.hxx  cuda_helper.cu  f.hxx  gpu_values.cu  gpu_values.hxx  main.cxx  scheme.hxx  values.hxx
2017_2018/tp/Ex2/src/: CMakeLists.txt  FindPAPI.cmake  content.txt  main.cpp  util.cpp  util.hpp
2018_2019/TP/TP1/src/: CMakeLists.txt  Matrice.cpp  Matrice.hpp  MatriceBloc.cpp  MatriceBloc.hpp  exo1.cpp  exo2.cpp  matmul1.cpp  matmul2.cpp  matmul4.cpp  matmul5.cpp
2018_2019/TP/TP1/src/matrice/: CMakeLists.txt  Matrice.cpp  Matrice.hpp  Matrice.hxx  MatriceBloc.cpp  MatriceBloc.cxx  MatriceBloc.hpp  MatriceBloc.hxx  Vecteur.cpp  Vecteur.cxx  Vecteur.hpp  Vecteur.hxx
2018_2019/TP/TP1/src/timer/: timer.cpp  timer.hpp
2018_2019/TP/TP1/src/transposee/: CMakeLists.txt  transpose1.cpp  transpose1.cxx  transpose2.cpp  transpose2.cxx  transpose3.cpp  transpose3.cxx  transpose4.cpp  transpose4.cxx
2018_2019/TP/TP1/src/valeur_propre/: CMakeLists.txt  power1.cpp  power1.cxx  power1.f90  power2.cpp  power2.cxx  power2a.f90  power3.cpp  power3.cxx  power4.cpp  power4.cxx  power5.cpp
2018_2019/TP/TP2/src/: CMakeLists.txt  sin.cxx
2018_2019/TP/TP2/src/sinus_openmp_1/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP2/src/sinus_openmp_2/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP2/src/sinus_openmp_3/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP2/src/sinus_seq/: CMakeLists.txt  sinus.cxx  sinus_seq.cxx
2018_2019/TP/TP2/src/sinus_std_threads/: CMakeLists.txt  sinus_v1.cxx  sinus_v2.cxx
2018_2019/TP/TP2/src/util/: keyPress.cpp
2018_2019/TP/TP3/src/: CMakeLists.txt  sin.cxx  sin.hxx
2018_2019/TP/TP3/src/exemple_tasks/: CMakeLists.txt  main_seq.cxx  main_tasks.cxx
2018_2019/TP/TP3/src/sinus_coarse_1/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP3/src/sinus_coarse_2/: CMakeLists.txt  charge.cxx  sinus.cxx
2018_2019/TP/TP3/src/sinus_coarse_3/: CMakeLists.txt  charge.cxx  sinus.cxx
2018_2019/TP/TP3/src/sinus_fine/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP3/src/sinus_seq/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP3/src/sinus_tasks/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP3/src/util/: CMakeLists.txt  pause.cpp  pause.h
2018_2019/TP/TP4/src/PoissonMPI/: CMakeLists.txt  main.cxx  memory_used.c  memory_used.h  parameters.cxx  parameters.hxx  values.hxx
2018_2019/TP/TP4/src/sinus_hybrid_1/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP4/src/sinus_mpi/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP4/src/sinus_mpi_openmp_coarse/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP4/src/sinus_mpi_openmp_fine/: CMakeLists.txt  sinus.cxx
2018_2019/TP/TP5/code/src/: CMakeLists.txt
2018_2019/TP/TP5/src/: CMakeLists.txt
2018_2019/TP/TP5/src/addition_1/: CMakeLists.txt  add.hxx  main.cxx
2018_2019/TP/TP5/src/addition_2/: add.cu  add.h  add.hxx  calcul.cxx  calcul_GPU.cu  calcul_GPU.cxx  init.cu  main.c  main.cxx
2018_2019/TP/TP5/src/addition_3/: calcul.hxx  calcul_CPU.cxx  calcul_GPU.cu  main.cxx  somme.cu
2018_2019/TP/TP6/src/addition_CPU_OpenMP/: CMakeLists.txt  calcul.hxx  calcul_CPU.cxx
2018_2019/TP/TP7/src/cpu_openmp/: CMakeLists.txt  main.cxx  operation.h  process.cxx
2018_2019/TP/TP8/src/: CMakeLists.txt  calcul.cu  calcul.cxx  calcul.h  main.cxx
2018_2019/TP/TP8/src/C++11/: CMakeLists.txt  main4.cxx  main5.cxx  main6.cxx
2018_2019/TP/TP8/src/Kokkos/: CMakeLists.txt  main.cu  main.cxx  version_OpenMP.cmake
2018_2019/TP/TP8/src/Sequentiel/: CMakeLists.txt  Heat.cxx  HeatSeq.cxx  HeatSeqDifference.cxx  HeatSeqIteration.cxx  Matrix.cxx  Matrix.hxx  Params.hxx  heatSeq.cxx  main.cxx  save.cxx
2018_2019/TP/TP8/src/TBB/: CMakeLists.txt  Heat.cxx  Heat.hxx  HeatTBBDifference_0.cxx  HeatTBBDifference_1.cxx  HeatTBBDifference_3.cxx  HeatTBBIteration_0.cxx  HeatTBBIteration_1.cxx  HeatTBBIteration_3.cxx  HeatTBB_0.cxx  HeatTBB_1.cxx  Matrix.cxx  Matrix.hxx  Timer.hxx  heat.hxx  heatTBB.cxx  heatTBB_1.cxx
2018_2019/TP/TP8/src/cpu/: forces.cxx  main.cxx  save.cxx
2018_2019/TP/TP8/src/gpu/: CMakeLists.txt  calcul.cu  forces.cu  init.cu  laplacien.cu  main.cxx  save.cu
2018_2019/TP/TP8/src/gpu_variante/: CMakeLists.txt  calcul.cu  calcul.h  main.cxx
2018_2019/TP/TP8/src/perfs/: CMakeLists.txt  cuda_check.cuh  plot_stride.py  stride.cu  timerGPU.cuh
2018_2019/TP/TP8/src/reduction/: reduction_kernel.cu
2019_2020/NN/CPU/src/: CMakeLists.txt  input.cxx  input.hxx  io_png.cxx  io_png.hxx  main.cxx  matrix.hxx  reseau.cxx  reseau.hxx  vector.hxx
2019_2020/TP windows/TP4/src/: CMakeLists.txt  CMakeSettings.json  sin2.hxx
(+2794 files in other folders)
