#set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE RelWithDebInfo)
add_executable(matmul1 matmul1.cpp Matrice.cpp)
add_executable(matmul2 matmul2.cpp Matrice.cpp)
add_executable(matmul3 matmul3.cpp Matrice.cpp)
add_executable(matmul4 matmul4.cpp Matrice.cpp)
add_executable(matmul5 matmul5.cpp Matrice.cpp MatriceBloc.cpp)
